@@ -21,6 +21,7 @@ kg=kg
 mass=Mass
 bar.graph=Bar Graph
 thermal.energy=Thermal Energy
+negative.potential.energy=Potential Energy (negative)
 potential.energy=Potential Energy
 total.energy=Total Energy
 kinetic.energy=Kinetic Energy
@@ -43,7 +44,7 @@ gravity=Gravity
 energy.pie.chart=Energy Pie Chart
 ignore.thermal=Ignore Thermal
 show.thermal=Show Thermal
-show=Show
+show.pie.chart=Show Pie Chart
 potential=Potential
 total=Total
 thermal=Thermal
