@@ -3,6 +3,8 @@ package edu.colorado.phet.ec3;
 
 import edu.colorado.phet.ec3.common.Legend;
 
+import java.awt.*;
+
 /**
  * User: Sam Reid
  * Date: Dec 22, 2005
@@ -18,6 +20,7 @@ public class EC3Legend extends Legend {
         addEntry( EnergySkateParkStrings.getString( "kinetic.energy" ), ec3Module.getEnergyLookAndFeel().getKEColor() );
         addEntry( EnergySkateParkStrings.getString( "potential.energy" ), ec3Module.getEnergyLookAndFeel().getPEColor() );
         addEntry( EnergySkateParkStrings.getString( "thermal.energy" ), ec3Module.getEnergyLookAndFeel().getThermalEnergyColor() );
+        addEntry( EnergySkateParkStrings.getString( "negative.potential.energy" ), Color.black );
     }
 
     public void addTotalEnergyEntry() {
