@@ -2,6 +2,7 @@
 Bugfix: Sometimes when paused, 'go' is unavailable.
 Added pause message to play area for when 'go' is paused (instead of just when 'record' is paused.)
 Bugfix: When energy vs position graph is copied, if the data is off-the-chart, it comes up bogus.
+Relabeled the "show pie chart" checkbox to "show pie chart".
 
 1.02.22 (11-29-2006)
 Bugfix: when entering playback mode, floor track duplicated.
